--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --config=config/webpack.dev.js",
 		"dev": "nodemon --inspect --watch config --watch app ./app/main.js",
+		"devn": "nodemon --watch config --watch app ./app/main.js",
 		"build": "webpack --config=app/config/webpack.prod.js --env.NODE_ENV=production",
 		"build:dev": "webpack --config=config/webpack.dev.js",
 		"prod": "set NODE_ENV=production&& node  app/main.js",
