completed the user dashboard

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NODE_ENV=production
+NODE_ENV=dev
 DB_URI='mongodb+srv://dbUser:abcde@cluster0.lwcbk.mongodb.net/node-final?retryWrites=true&w=majority'
