--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"autoprefixer": "^9.7.1",
+		"autoprefixer": "^9.8.6",
 		"babel-minify": "^0.5.1",
 		"babel-minify-webpack-plugin": "^0.3.1",
 		"css-loader": "^3.2.0",
@@ -35,6 +35,7 @@
 		"postcss-import": "^12.0.1",
 		"postcss-loader": "^3.0.0",
 		"postcss-url": "^8.0.0",
+		"precss": "^4.0.0",
 		"resolve-url-loader": "^3.1.1",
 		"sass-loader": "^8.0.0",
 		"style-loader": "^1.0.0",
