--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV=dev
 DB_URI='mongodb+srv://dbUser:abcde@cluster0.lwcbk.mongodb.net/node-final?retryWrites=true&w=majority'
+API_URI = 'https://subscription-api-4412.herokuapp.com'
