--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon --inspect --watch config --watch app ./app/main.js",
 		"devn": "nodemon --watch config --watch app ./app/main.js",
 		"build": "webpack --config=app/config/webpack.prod.js --env.NODE_ENV=production",
-		"build:dev": "webpack --config=config/webpack.dev.js",
+		"build:dev": "webpack --config=app/config/webpack.dev.js",
 		"prod": "set NODE_ENV=production&& node  app/main.js",
 		"babel": "babel node_modules/core-js/fn/promise src/main.js"
 	},
